# constantes-macros

./: configure  configure.ac
src/: Makefile.am  Makefile.in  main.c
